src/assets/projects/roc/css/global.scss
/* ... */
.icon-token-ca_1 {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/ca_1.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-tc {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/tc.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-tf {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/tf.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-tp_0 {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/tp_0.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-tp_1 {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/tp_1.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-tx {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/tx.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-status-success {
    width: 24px;
    height: 24px;
    background-image: url('../icons/SuccessOutline.svg');
    background-size: 24px 24px;
    background-repeat: no-repeat;
    filter: var(--filter-semantic-positive);
}

.icon-status-warning {
    width: 24px;
    height: 24px;
    background-image: url('../icons/WarningOutline.svg');
    background-size: 24px 24px;
    background-repeat: no-repeat;
    filter: var(--filter-semantic-negative);
}

.icon-status-alert {
    width: 24px;
    height: 24px;
    background-image: url('../icons/AttentionOutline.svg');
    background-size: 24px 24px;
    background-repeat: no-repeat;
    filter: var(--filter-semantic-negative);
}

.variation-indicator {
    height: 8px;
    width: 8px;
    border-radius: 50%;
    display: inline-block;
    margin-left: 5px;
    margin-bottom: 0px;
}

.positive-indicator {
    background-color: var(--color-semantic-positive);
}

.negative-indicator {
    background-color: var(--color-semantic-negative);
}

.neutral-indicator {
    background-color: var(--color-semantic-neutral);
}

/* Last operations */

.content-last-operations {
    /* Auto layout */
    margin-top: 24px;
    padding: 32px;
    border-radius: var(--card-border-radius);
    background: var(--surface-color-1);
    box-shadow: var(--surface-shadow-1);

    /*
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0px;

  width: 1180px;
  height: 357.39px;*/
}

h1.title-last-operations {
    font-family: var(--brand-font);
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: normal;
    margin-bottom: 56px;
    color: var(--color-text-primary);
}

.about-button {
    font-family: var(--main-font);
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 19px;
    text-align: right;
    color: var(--color-text-secondary);
    background-color: transparent;
    border-radius: 4px;
    justify-content: center;
    align-items: center;
    margin-bottom: 8px;
    margin-right: 16px;
    cursor: pointer;
    display: flex;
    justify-content: end;
    .logo-queue {
        width: 16px;
        height: 16px;
        margin-left: 8px;
        background-image: url('../icons/aboutqueueicon.svg');
        background-size: 16px 16px;
        background-repeat: no-repeat;
        display: inline-block;
        filter: var(--color-icon-link-secondary-filter);
    }
}

/* Modal Queue info*/
.queue-modal-container {
    display: flex;
    flex-direction: column;
    padding: 8px;

    .row {
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin-bottom: 16px;
    }

    .text {
        flex: 1;
        margin-right: 10px;
    }

    .button-container {
        display: flex;
        justify-content: center;
        align-items: center;
        margin-top: 20px;
    }

    @media (max-width: 600px) {
        .row {
            flex-direction: column-reverse;
            align-items: center;
            text-align: center;
        }

        .icon {
            margin-top: 10px;
        }
    }
}

.queue-modal-container > .row {
    padding-bottom: 12px;
    border-bottom: 1px solid var(--dividers);
}

.status-list > div {
    font-family: var(--main-font);
    color: var(--color-text-primary);
    padding-top: 0px;
    padding-bottom: 12px;
    border-bottom: 1px solid var(--dividers);
}

.status-list > div:last-child {
    border-bottom: none;
}
.table-status-icon-cell {
    width: 130px;
}

/* Modal Queue info*/

/* Modal Important Notice*/
.ModalImportantNotice {
    font-family: var(--brand-font);

    .ant-modal-content {
        background: rgb(248, 248, 249);
        // border-radius: 4px;
        box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
    }
    .ant-modal-header {
        background-color: transparent !important;
        border-bottom: 0 !important;
        font-style: italic;
        font-weight: 900;
        font-size: 20px;
        line-height: 24px;
        padding: 24px 24px;
    }

    .ant-modal-title {
        color: black !important;
        font-family: 'Sora';
        font-size: 20px !important;
        font-weight: 700 !important;
        font-style: normal !important;
        letter-spacing: 0px !important;
        text-align: left !important;
    }

    .ant-modal-body {
        padding: 14px 32px;
    }

    // .ant-modal-content {
    //     border: 0 !important;
    // }
}
/* ... */

